--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,6 +79,7 @@ dependencies {
     //DatePicker
     implementation 'com.wdullaer:materialdatetimepicker:4.2.3'
 
+    debugImplementation 'im.dino:dbinspector:4.0.0'
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
